<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roopanc.speed_o.MainActivity">

    <include android:id="@+id/toolbarhome" layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@id/toolbarhome"
        android:layout_above="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:gravity="center"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/starttimetv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/duration"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <Chronometer
                android:id="@+id/durationtv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/distance"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/distancetv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="20.00 KM"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Altitude"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/altitudetv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:text="600.00 M"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/heading"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/headingtv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="349^"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/end_time"
                android:textSize="20sp"
                android:gravity="center"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/endtimetv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:id="@+id/speedTV"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/speed"
                android:textSize="20sp"
                android:gravity="center"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/avgspeedtv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="20 KM/H"
                android:textSize="20sp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/max_speed"
                android:textSize="20sp"
                android:gravity="center"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/maxspeedtv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_height="match_parent"
                android:text="40 KM/H"
                android:textSize="20sp"
                android:gravity="center"
                />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textview"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_start_to_track"
        android:textSize="26sp"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:id="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        >

        <Button
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/startbt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:padding="16dp"
            android:text="@string/start"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/stopbt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:padding="16dp"
            android:text="@string/stop"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</RelativeLayout>
